# qiushui-ai-docker

./: .env.example  .gitignore  README.md  docker-compose.yml
.cursor/rules/: index.mdc
agents/: Dockerfile
agents/app/: alembic.ini  langgraph.json  main.py  pyproject.toml  run_server.py
agents/app/alembic/: env.py  migrate.py
agents/app/alembic/versions/: 20250817172544_initial_schema.py  20250830161758_add_context.py  20250831174511_add_cascade_delete_for_runs_thread_fkey.py  20250913193817_add_version_table.py  20250913213535_add_metadata_for_assistant_table_and_.py
agents/app/graphs/react_agent/: agent.py
agents/app/scripts/: prestart.sh  restart.sh  start.sh  stop.sh
agents/app/src/agent_server/: __init__.py  constants.py  main.py
agents/app/src/agent_server/api/: assistants.py  runs.py  threads.py
agents/app/src/agent_server/core/: config.py  database.py  health.py  orm.py  sse.py
agents/app/src/agent_server/core/serializers/: base.py  general.py  langgraph.py
agents/app/src/agent_server/middleware/: double_encoded_json.py
agents/app/src/agent_server/models/: __init__.py  assistants.py  runs.py  threads.py
agents/app/src/agent_server/observability/: __init__.py  langfuse_integration.py
agents/app/src/agent_server/services/: assistant_service.py  base_broker.py  broker.py  event_converter.py  event_store.py  langgraph_service.py  streaming_service.py  thread_state_service.py
agents/app/src/agent_server/utils/: __init__.py  sse_utils.py
backend/: Dockerfile
backend/app/: alembic.ini  pyproject.toml
backend/app/qiushuiai/: backend_pre_start.py  initial_data.py  main.py  tests_pre_start.py
backend/app/qiushuiai/alembic/: env.py
backend/app/qiushuiai/alembic/versions/: 0d72fa819abf_add_qsa_note_collect_creater_table.py  19ddeb2fd6f1_convert_all_json_fields_to_jsonb.py  44db85b9c11e_add_tool_info_jsonb_field_to_qsa_tools_.py  4d37a1308162_add_tags_column_to_sys_tags.py  606fbee1b0f2_add_chat_conversation_uuid_to_chat_.py  73e7fc808773_create_all_tables_complete_initial_.py  857a5e073750_change_ext_data_to_jsonb_type_in_qsa_.py  98c636f279e8_add_api_key_field_to_qsa_usr_user_table.py  9ec69dd4c006_mark_current_db_sync.py  add_tags_column_to_agent.py  convert_parent_id_to_uuid_in_note_tag.py  d6ff6152f601_convert_json_to_jsonb.py  dd1eb32dfa0b_add_qsa_note_collect_content_table_and_.py  fd043f31b5f2_add_headers_column_to_qsa_tools.py  fd35b3e81c15_update_tool_info_field_from_json_to_.py  fix_whiteboard_is_public_type.py
backend/app/qiushuiai/api/: main.py
backend/app/qiushuiai/core/: config.py  db.py  db_filters.py  exceptions.py  middleware.py  query_builder.py  response.py  security.py
backend/app/qiushuiai/modules/agent/: agent_api.py  agent_service.py
backend/app/qiushuiai/modules/aimodel/: __init__.py  aimodel_api.py
backend/app/qiushuiai/modules/chat/: conversation_api.py  message_api.py
backend/app/qiushuiai/modules/knowledge/: __init__.py  document_api.py  knowledge_api.py  knowledge_search_api.py  vector_search_api.py
backend/app/qiushuiai/modules/knowledge/processors/: document_processor.py  document_status_manager.py  vector_search.py  vector_store.py
backend/app/qiushuiai/modules/note/: __init__.py  markdown_parser.py  note_collect_api.py  note_collect_creater_api.py  note_mine_api.py  note_tag_api.py  note_tag_service.py  tag_hierarchy_service.py
backend/app/qiushuiai/modules/prompts/: __init__.py  prompts_api.py
backend/app/qiushuiai/modules/sys/: __init__.py  sys_tags_api.py  sys_tags_service.py
backend/app/qiushuiai/modules/tools/: __init__.py  mcp_service.py  tools_api.py
backend/app/qiushuiai/modules/user/: __init__.py  deps.py  deps_unified.py  deps_unified_v2.py  user_api.py
backend/app/qiushuiai/modules/utils/: oss_service.py  upload_api.py
backend/app/qiushuiai/modules/whiteboard/: __init__.py  whiteboard_api.py  whiteboard_note_api.py
backend/app/qiushuiai/schemas/: __init__.py  agent.py  aimodel.py  chat.py  knowledge.py  note.py  prompts.py  sys.py  tools.py  user.py  whiteboard.py
backend/app/scripts/: fix_user_timestamps.py  prestart.sh  restart.sh  start.sh  stop.sh
nginx/: Dockerfile  nginx.conf
nginx/frontend/: index.html
nginx/frontend/assets/: 401.lazy-B6I1Lixx.js  401.lazy-CzEFwoJt.js  401.lazy-rj78xnHP.js  403.lazy-Bor7ujof.js  403.lazy-Dljn4HhA.js  403.lazy-xMnPt2RD.js  404.lazy-DOorM-yO.js  404.lazy-DgQMlpYB.js  404.lazy-n2dFDYML.js  500.lazy-B4KpziZQ.js  500.lazy-C68IkZ-X.js  500.lazy-rMfWBxwJ.js  503.lazy-BCTZCODr.js  503.lazy-Bk6NHZni.js  503.lazy-U9K7uL9v.js  NoteEditor-0TjkwLf0.css  NoteEditor-CRsIChBS.css  NoteEditor-CprC5Dzg.js  NoteEditor-D-OFh6rp.js  NoteEditor-eXmSlbk5.js  _uuid.lazy-8UBczu9a.js  _uuid.lazy-BL_MKVvz.js  _uuid.lazy-BclIBWz_.js  _uuid.lazy-CvQ8uX2v.js  _uuid.lazy-DN4n65DD.js  _uuid.lazy-DhmrnWBy.js  abap-BiBCI6gy.js  abap-ChaJSrWN.js  abap-nWoJ1AVu.js  abnf-BHjRF0fV.js  abnf-D4IebRzF.js  (+1072 more)
postgresql/: Dockerfile  init-multi-db.sh
scripts/: check-environment.sh  rebuild.bat  rebuild.sh  restart.sh  setup-cn-mirrors.sh  start-rebuild.sh  start.bat  start.sh  stop.bat  stop.sh  update.bat  update.sh
